<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CafeWaiter</string>
    <string name="action_settings">Settings</string>
    <string name="start_table">Start Table</string>
    <string name="add_product">Add Product</string>
    <string name="remove_product">Remove Product</string>
    <string name="check_out">Check Out</string>
    <string name="table_no_hint">Table Number</string>
    <string name="title_activity_start_table">StartTableActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="product_id_hint">Product ID</string>

</resources>
