<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   
     <Button
        android:id="@+id/start_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_table"
        android:onClick="setTableView" />
     
    <Button
        android:id="@+id/add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product" 
        android:onClick="setAddProductView"/>

    <Button
        android:id="@+id/remove_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_product" />

    <Button
        android:id="@+id/check_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out" />
    

</LinearLayout> 