<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <EditText
        android:id="@+id/add_product_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/table_no_hint"
        android:ems="10"
        android:inputType="number"/>
     
    <EditText
        android:id="@+id/add_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_id_hint"
        android:ems="10"
        android:inputType="number"/>

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/table_no_hint"
        android:text="@string/add_product" 
        android:onClick="aProduct"/>

</LinearLayout> 
